--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -20,6 +20,8 @@ The following data files are used in this chapter:
 |data_okcupid.csv   |
 |data_experiment.csv   |
 
+The files are available at: https://github.com/dstanley4/psyc6060bookdown
+
 ## Objective
 
 The objective of this chapter is to familiarize you with some key commands in the tidyverse. These commands are used in isolation of each other for the most part. In the next chapter we will use these commands in a more coordinated way as we load a data set and move it from raw data to data that is ready for analysis (i.e., analytic data). You can start this project by Starting the class assignment on R Studio Cloud that corresponds to the chapter name.
