--- a/book.bib
+++ b/book.bib
@@ -216,3 +216,10 @@
   year={1993},
   publisher={American Psychological Association}
 }
+
+@book{keur2020,
+  title={iOS programming: The Big Nerd Ranch guide},
+  author={Keur, Christian and Hillegass, Aaron},
+  year={2020},
+  publisher={Pearson Technology Group}
+}
