--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -214,24 +214,25 @@ As you work through this chapter, create your own new script for each example. I
 
 Getting started:
 
-**R Studio in the Cloud Assignment: The Class**
+**The Class: R Studio in the Cloud Assignment**
+
 1. The data should be in the assignment project automatically. Just start the assignment. 
 
 For everyone in the class, that's it.
 
 For those of you reading this work not in the class, see the two options below:
 
-**R Studio in the Cloud, custom project**
+**R Studio Cloud, custom project**
 
 1. Create a new Project using the web interface
 
-2. Upload your data files in using the upload button in the Files pane. The data files need are listed at the beginning of this chapter.
+2. Upload all the example data files in to the project. The data files need are listed at the beginning of this chapter. The upload button can be found on the Files tab.
 
-**R Studio Local Computer, custom project**
+**R Studio Computer, custom project**
 
-1. Create a folder on your computer for the analysis
+1. Create a folder on your computer for the example
 
-2. Place your data files in that folder. The data files need are listed at the beginning of this chapter.
+2. Place all the example data files in that folder. The data files need are listed at the beginning of this chapter.
 
 3. Use the menu item File > New Project... to start the project
 
@@ -244,6 +245,13 @@ For those of you reading this work not in the class, see the two options below:
 Regardless of whether your are working from the cloud or locally you should now have an R Studio project with your data files in it. 
 
 We ancticipate many people will doubtless want to refer back to an encapsulated set of instructions for each design. There for the example for each design is written in a way that it stands alone. A consequence of this approach is that there is some redundancy in the code across example. We see this a strength  - because readers will see the commonalities across differ types of designs.
+
+As you make a script for each example:
+
+* Recall the instruction from Chapter 1 about putting the date and your name in the script via comments.
+
+* Recall the instruction from Chapter 1 about running library(tidyverse) before you type the rest of each script - this provides you with tidyverse autocomplete for the script.
+
 
 ## Entering data into spreadsheets
 
@@ -264,9 +272,15 @@ There are many ways to save data, but the CSV data is one of the better ones bec
 
 ## Experiment: Between 
 
-Ensure your data is in the folder. Start a new script with the name. In that script enter the commands below.
+This section outlines a workflow appropriate for when you plan to conduct independent groups t-tests or a between-particpants ANOVA.
 
-We can load the data_ex_between.csv data by creating a script with commands below. As noted previously, these data corresponds to a design where the researcher is interested in comparing run times (elapsed_time) based on sex (male/female). This section outlines a workflow appropriate for when you plan to conduct independent groups t-tests or a between-particpants ANOVA.
+To Begin:
+
+* Use the Files tab to confirm you have the data: data_ex_between.csv
+
+* Start a new script for this example. Don't forget to start the script name with "script_".
+
+As noted previously, these data correspond to a design where the researcher is interested in comparing run times (elapsed_time) based on sex (male/female). 
 
 ```{r, results=FALSE, message=FALSE}
 # Date: YYYY-MM-DD
@@ -280,7 +294,11 @@ my_missing_value_codes <- c("-999", "", "NA")
 
 raw_data_beween <- read_csv(file = "data_ex_between.csv",
                      na = my_missing_value_codes)
+```
 
+We load the intial data into a raw_data_beween but immediately make a copy we will work with called analytic_data_between. It's good to keep a copy of the raw data for reference if you encounter problems.
+
+```{r}
 analytic_data_between <- raw_data_beween
 
 ```
@@ -297,7 +315,7 @@ analytic_data_between <- analytic_data_between %>%
   clean_names()
 ```
 
-You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
+You can confirm the column names follow our naming convention with the glimpse() command. 
 
 ```{r}
 glimpse(analytic_data_between)
@@ -305,14 +323,14 @@ glimpse(analytic_data_between)
 
 ### Creating factors
 
-Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character. We have one variable sex that is categorical that is of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
+Following initial cleaning, we identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect the glimpse() output - if you followed our data entry naming conventions, categorical variables should be of the type character. We have one variable, sex, that is a categorical variable of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
 
 
 ```{r}
 glimpse(analytic_data_between)
 ```
 
-You can quickly convert all character columns to factors using the code below:
+You can quickly convert all character columns to factors using the code below. In this case, this just converts the sex column to a factor. Because there is only one column (sex) being converted to a factor, we could have treated it the same was as the id column below. However, we use this code because of its broad applicability to many scripts.
 
 ```{r}
 # Turn all columns that are of type character into factors
@@ -322,25 +340,25 @@ analytic_data_between <- analytic_data_between %>%
 
 ```
 
-The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
+The participant identification number in the id column is a numeric column, so it was not coverted by the above code. The id column is coverted to a factor with the code below.
 
 ```{r}
-analytic_data_between <-analytic_data_between %>%
+analytic_data_between <- analytic_data_between %>%
   mutate(id = as_factor(id))
 ```
 
-You can ensure all of these columns are now factors using the glimpse() command. 
+You can ensure both the sex and id columns are now factors using the glimpse() command. 
 
 ```{r}
 glimpse(analytic_data_between)
 ```
 
-Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+This example is so small it's clear you didn't miss converting any columns to factors. In general, however, at this point you should inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
 
 
 ### Factor screening
 
-Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factor in your data for eronious factor levels. The code below displays the factor levels:
+Inspect the levels of each factor carefully. Make sure that there not any levels for a factor that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factors in your data for eronious factor levels. The code below displays the factor levels:
 
 
 ```{r}
@@ -350,7 +368,7 @@ analytic_data_between %>%
 ```
 
 
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
 
 ```{r}
 # Custom reordering of factor levels
@@ -371,9 +389,9 @@ analytic_data_between %>%
 
 ### Numeric screening
 
-For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
 
-One options for doing so is the summary command again. This time, however, we use "is.numeric" in the where() command.
+One option for doing so is the summary command again. This time, however, we use "is.numeric" in the where() command.
 
 ```{r}
 analytic_data_between %>%
@@ -381,11 +399,29 @@ analytic_data_between %>%
   summary()
 ```
 
-Scan the min and max values for each variable to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). Once this is complete, you are done preparing your between participant analytic data.
+Scan the min and max values to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). 
+
+In this example all the values are reasonable values. However, if we discovered an out of range value (or values) for elapsed time we could convert those values to missing values with the code below. This code changes (i.e., mutates) a value in the elapsed_time column to become NA (not available or missing) if that value is less than zero. If the value is greater than or equal to zero, it stays the same. Note that when using this command we have to be very specific in terms of specifying our missing value. It usually needs to be one of NA_real_ or NA_character_. For numeric columns use NA_real_ and for character columns use NA_character_. 
+
+```{r, eval = FALSE}
+analytic_data_between <- analytic_data_between  %>% 
+    mutate(elapsed_time = case_when(
+      elapsed_time < 0 ~ NA_real_,
+      elapsed_time >= 0 ~ elapsed_time))
+```
+
+Once you are done numeric screening, the data is ready for analysis.
 
 ## Experiment: Within one-way
 
-The one-way within-participant ANOVA example uses the data file data_ex_within.csv. Initial loading of the file, including the specification of missing data codes, is provided by the code below. The data corresponds to a designs where the researcher is interested in comparing run times (elapsed_time) across three different occasions (march/may/june).
+This section outlines a workflow appropriate for when you have a repeated measures design with a single repeated measurs predictor. The data corresponds to a design where the researcher is interested in comparing run times (elapsed_time) across three different occasions (march/may/june).
+
+To Begin:
+
+* Use the Files tab to confirm you have the data: data_ex_within.csv
+
+* Start a new script for this example. Don't forget to start the script name with "script_".
+
 
 ```{r, results='hide'}
 # Date: YYYY-MM-DD
@@ -399,7 +435,11 @@ my_missing_value_codes <- c("-999", "", "NA")
 
 raw_data_within <- read_csv(file = "data_ex_within.csv",
                      na = my_missing_value_codes)
+```
 
+We load the intial data into a raw_data_within but immediately make a copy we will work with called analytic_data_within. It's good to keep a copy of the raw data for reference if you encounter problems.
+
+```{r}
 analytic_data_within <- raw_data_within
 
 ```
@@ -424,14 +464,14 @@ glimpse(analytic_data_within)
 
 ### Creating factors
 
-Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character. We have one variable sex that is categorical that is of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
+Following initial cleaning, we identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect the glimpse() output - if you followed our data entry naming conventions, categorical variables should be of the type character. We have one variable, sex, that is a categorical variable of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
 
 
 ```{r}
 glimpse(analytic_data_within)
 ```
 
-You can quickly convert all character columns to factors using the code below:
+You can quickly convert all character columns to factors using the code below. In this case, this just converts the sex column to a factor. Because there is only one column (sex) being converted to a factor, we could have treated it the same was as the id column below. However, we use this code because of its broad applicability to many scripts.
 
 ```{r}
 # Turn all columns that are of type character into factors
@@ -441,25 +481,25 @@ analytic_data_within <- analytic_data_within %>%
 
 ```
 
-The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
+The participant identification number in the id column is a numeric column, so it was not coverted by the above code. The id column is coverted to a factor with the code below.
 
 ```{r}
-analytic_data_within <-analytic_data_within %>%
+analytic_data_within <- analytic_data_within %>%
   mutate(id = as_factor(id))
 ```
 
-You can ensure all of these columns are now factors using the glimpse() command. 
+You can ensure both the sex and id columns are now factors using the glimpse() command. 
 
 ```{r}
 glimpse(analytic_data_within)
 ```
 
-Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+This example is so small it's clear you didn't miss converting any columns to factors. In general, however, at this point you should inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
 
 
 ### Factor screening
 
-Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factor in your data for eronious factor levels. The code below displays the factor levels:
+Inspect the levels of each factor carefully. Make sure that there not any levels for a factor that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factors in your data for eronious factor levels. The code below displays the factor levels:
 
 
 ```{r}
@@ -469,7 +509,7 @@ analytic_data_within %>%
 ```
 
 
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
 
 ```{r}
 # Custom reordering of factor levels
@@ -490,22 +530,54 @@ analytic_data_within %>%
 
 ### Numeric screening
 
-For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
 
-One options for doing so is the summary command again. This time, however, we use "is.numeric" in the where() command.
+Because we have several columns that we doing numeric screening for, it's better to use the skim() command from the skimr package. The skim() command quickly provides the basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.  
+
 
 ```{r}
+library(skimr)
+
 analytic_data_within %>%
   select(where(is.numeric)) %>%
-  summary()
+  skim()
+```
+
+```{r, echo=FALSE}
+library(tidyverse)
+
+outdf <- analytic_data_within %>%
+  select(where(is.numeric)) %>%
+  skim_without_charts() %>%
+  as_tibble() %>%
+  select(-skim_type) %>%
+    rename_with(.fn = str_remove,
+              .cols = everything(),
+              pattern = "numeric.") %>%
+  select(-p25, -complete_rate, -p75) %>%
+  as.data.frame()
+
+outdf$mean = round(outdf$mean,2)
+outdf$sd = round(outdf$sd,2)
+
+outdf
+```
+
+Scan the minimum and maximum values (p0 and p100) to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). 
+
+In this example all the values are reasonable values. However, if we discovered an out of range value (or values) for elapsed time we could convert those values to missing values with the code below. This code changes (i.e., mutates) a value in the march column to become NA (not available or missing) if that value is less than zero. If the value is greater than or equal to zero, it stays the same. Note that when using this command we have to be very specific in terms of specifying our missing value. It usually needs to be one of NA_real_ or NA_character_. For numeric columns use NA_real_ and for character columns use NA_character_. 
+
+```{r, eval = FALSE}
+analytic_data_within <- analytic_data_within  %>% 
+    mutate(march = case_when(
+      march < 0 ~ NA_real_,
+      march >= 0 ~ march))
 ```
 
 
-Scan the min and max values for each variable to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). Once this is complete, you are done preparing your between participant analytic data.
-
 ### Pivot to tidy data
 
-The analytic data in it's current for does not conform to the the tidy data specification. Inspect the data with the print() command. Notice the there is not column for occasion. The levels of occasion are spread across three columns. Correspondingly, elapsed time is spread across multiple columns in the same row and is not labeled as elaped time. We need to restructure the data into the tidy data format so that we have a single elapsed time observation per row and a single column per variable.
+The analytic data in it's current for does not conform to the the tidy data specification. Inspect the data with the print() command. Notice the there is not column for occasion. The levels of occasion are spread across three columns. Correspondingly, elapsed time is spread across multiple columns (march, may, july) in the same row and is not labeled as elaped time. We need to restructure the data into the tidy data format so that we have a single elapsed time observation per row and a single column per variable.
 
 ```{r}
 print(analytic_data_within)
@@ -539,7 +611,7 @@ You can confirm that occasion is now a factor with the glimpse() command. Once t
 glimpse(analytic_data_within_tidy)
 ```
 
-
+You now have two data sest analytic_data_within and analytic_data_within_tidy. You can calculate descriptive statistics, correlations and general cross-sectional analyses using the analytic_data_within data set. If you want to conduct a repeated measures ANOVA you use the analytic_data_within_tidy data set. Both data sets are now ready for analysis.
 
 ## Experiment: Within N-way
 
@@ -1307,7 +1379,7 @@ You now have three data sets The data analytic_occasion_tidy is appropriate for 
 
 
 ### skim()
-One approach is the skim() command from the skimr package. This quickly provides the basic descriptive statistics. In the output for this command there are also several columns that beging with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The median is the 50th percentile. The interquartile range is the range between p25 and p75. Notice that we run this command on the "wide" version of the data (analytic_data_occasions) rather than tidy version of the data (analytic_occasion_tidy).
+One approach is the skim() command from the skimr package. The skim() command quickly provides the basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75. Notice that we run this command on the "wide" version of the data (analytic_data_occasions) rather than tidy version of the data (analytic_occasion_tidy).
 
 ```{r, eval = FALSE}
 library(skimr)
